--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Test Suite
 on: ["push", "pull_request"]
 
 jobs:
-  run-tests: # TODO name change
+  run-tests:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
