--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,10 @@
 name: Test Suite
 
-on: ["push", "pull_request"]
-
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 jobs:
   run-tests:
     runs-on: ubuntu-latest
