--- a/.github/workflows/test_suite.yml
+++ b/.github/workflows/test_suite.yml
@@ -2,9 +2,9 @@ name: Test Suite
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 jobs:
   run-tests:
     runs-on: ubuntu-latest
@@ -12,53 +12,58 @@ jobs:
       fail-fast: false
       matrix:
         orm: [active_record, mongoid]
-        rails: ['4.2', '5.0', '5.1', '5.2', '6.0']
-        ruby: ['2.5', '2.6', '2.7'] # TODO fix repo to work with ruby-head
+        rails: ["5.0", "5.1", "5.2", "6.0"]
+        ruby: ["2.5", "2.6", "2.7"] # TODO fix repo to work with ruby-head
 
     steps:
-    - uses: actions/checkout@v2
-    - uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: ${{ matrix.ruby }}
-    - uses: actions/cache@v2
-      with:
-        path: |
-          **/bundle
-        key: bundle-use-ruby-${{ matrix.ruby }}-rails-${{ matrix.rails }}-orm-${{ matrix.orm }}-gemfile-${{ hashFiles(format('**/gemfiles/rails_{0}.gemfile', matrix.rails)) }}-gemspec-${{ hashFiles('**/devise-security.gemspec') }}
-    - name: bundle install
-      env:
-        BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
-      run: |
-        bundle config path vendor/bundle
-        bundle install
-      if: ${{ matrix.rails != '4.2' || (matrix.rails == '4.2' && matrix.ruby == '2.5') }}
-    - name: Start MongoDB
-      uses: superchargejs/mongodb-github-action@1.0.0
-      if: ${{ matrix.orm == 'mongoid' && (matrix.rails != '4.2' || (matrix.rails == '4.2' && matrix.ruby == '2.5')) }}
-    - name: Tests for ORM ${{ matrix.orm }}, Rails ${{ matrix.rails }}, and Ruby ${{ matrix.ruby }}
-      env:
-        BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
-        CI: true
-        DEVISE_ORM: ${{ matrix.orm }}
-      run: |
-        bundle exec rake
-      if: ${{ matrix.rails != '4.2' || (matrix.rails == '4.2' && matrix.ruby == '2.5') }}
-    - name: Coveralls Parallel
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        flag-name: run-orm-${{ matrix.orm }}-rails-${{ matrix.rails }}-ruby-${{ matrix.ruby }}
-        parallel: true
-        path-to-lcov: ./coverage/lcov/devise-security.lcov
-      if: ${{ matrix.rails != '4.2' || (matrix.rails == '4.2' && matrix.ruby == '2.5') }}
+      - uses: actions/checkout@v2
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ${{ matrix.ruby }}
+      - uses: actions/cache@v2
+        with:
+          path: |
+            **/bundle
+          key:
+            bundle-use-ruby-${{ matrix.ruby }}-rails-${{ matrix.rails }}-orm-${{
+            matrix.orm }}-gemfile-${{
+            hashFiles(format('**/gemfiles/rails_{0}.gemfile', matrix.rails))
+            }}-gemspec-${{ hashFiles('**/devise-security.gemspec') }}
+      - name: bundle install
+        env:
+          BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
+        run: |
+          bundle config path vendor/bundle
+          bundle install
+      - name: Start MongoDB
+        uses: superchargejs/mongodb-github-action@1.0.0
+        if: ${{ matrix.orm == 'mongoid' }}
+      - name:
+          Tests for ORM ${{ matrix.orm }}, Rails ${{ matrix.rails }}, and Ruby
+          ${{ matrix.ruby }}
+        env:
+          BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
+          CI: true
+          DEVISE_ORM: ${{ matrix.orm }}
+        run: |
+          bundle exec rake
+      - name: Coveralls Parallel
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          flag-name:
+            run-orm-${{ matrix.orm }}-rails-${{ matrix.rails }}-ruby-${{
+            matrix.ruby }}
+          parallel: true
+          path-to-lcov: ./coverage/lcov/devise-security.lcov
 
   finish:
     needs: run-tests
     runs-on: ubuntu-latest
     steps:
-    - name: Upload coverage to Coveralls
-      uses: coverallsapp/github-action@v1.1.2
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        parallel-finished: true
-        path-to-lcov: ./coverage/lcov/devise-security.lcov
+      - name: Upload coverage to Coveralls
+        uses: coverallsapp/github-action@v1.1.2
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          parallel-finished: true
+          path-to-lcov: ./coverage/lcov/devise-security.lcov
