--- a/.github/workflows/test_suite.yml
+++ b/.github/workflows/test_suite.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         orm: [active_record, mongoid]
-        rails: ["5.0", "5.1", "5.2", "6.0"]
+        rails: ["5.0", "5.1", "5.2", "6.0", "6.1"]
         ruby: ["2.6", "2.7", "3.0"] # TODO fix repo to work with ruby-head
 
     steps:
