--- a/.github/workflows/test_suite.yml
+++ b/.github/workflows/test_suite.yml
@@ -35,9 +35,11 @@ jobs:
         run: |
           bundle config path vendor/bundle
           bundle install
+        if: ${{ (matrix.orm != 'mongoid' && (matrix.ruby < '3.0')) }}
       - name: Start MongoDB
         uses: superchargejs/mongodb-github-action@1.0.0
-        if: ${{ matrix.orm == 'mongoid' }}
+        # Mongoid is not compatible with Ruby 3.0 as of 7.2.2
+        if: ${{ !(matrix.orm == 'mongoid' && matrix.ruby >= '3.0') }}
       - name:
           Tests for ORM ${{ matrix.orm }}, Rails ${{ matrix.rails }}, and Ruby
           ${{ matrix.ruby }}
@@ -47,6 +49,7 @@ jobs:
           DEVISE_ORM: ${{ matrix.orm }}
         run: |
           bundle exec rake
+        if: ${{ !(matrix.orm == 'mongoid' && matrix.ruby >= '3.0') }}
       - name: Coveralls Parallel
         uses: coverallsapp/github-action@master
         with:
@@ -56,6 +59,7 @@ jobs:
             matrix.ruby }}
           parallel: true
           path-to-lcov: ./coverage/lcov/devise-security.lcov
+        if: ${{ !(matrix.orm == 'mongoid' && matrix.ruby >= '3.0') }}
 
   finish:
     needs: run-tests
