Don't run actions for mongoid with ruby 3.0

--- a/.github/workflows/test_suite.yml
+++ b/.github/workflows/test_suite.yml
@@ -60,6 +60,7 @@ jobs:
             matrix.ruby }}
           parallel: true
           path-to-lcov: ./coverage/lcov/devise-security.lcov
+        if: success() || failure()
 
   finish:
     needs: run-tests
