--- a/.github/workflows/test_suite.yml
+++ b/.github/workflows/test_suite.yml
@@ -14,8 +14,6 @@ jobs:
         orm: [active_record, mongoid]
         rails: ["5.0", "5.1", "5.2", "6.0", "6.1"]
         ruby: ["2.6", "2.7", "3.0"] # TODO fix repo to work with ruby-head
-
-
     steps:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
@@ -36,7 +34,11 @@ jobs:
         run: |
           bundle config path vendor/bundle
           bundle install
-
+        # Mongoid is not compatible with Ruby 3.0 as of 7.2.2
+        # Rails < 5.2 is not compatible with Ruby 3.0
+        if:
+          ${{ (!(matrix.orm == 'mongoid' && matrix.ruby >= '3.0')) &&
+          !(matrix.rails < '6.0' && matrix.ruby >= '3.0' ) }}
       - name: Start MongoDB
         uses: superchargejs/mongodb-github-action@1.0.0
         if: ${{ matrix.orm == 'mongoid' }}
@@ -50,8 +52,10 @@ jobs:
         run: |
           bundle exec rake
         # Mongoid is not compatible with Ruby 3.0 as of 7.2.2
-        if: ${{ (!(matrix.orm == 'mongoid' && matrix.ruby >= '3.0')) &&
-            !(matrix.rails < '6.0' && matrix.ruby >= '3.0' ) }}
+        # Rails < 5.2 is not compatible with Ruby 3.0
+        if:
+          ${{ (!(matrix.orm == 'mongoid' && matrix.ruby >= '3.0')) &&
+          !(matrix.rails < '6.0' && matrix.ruby >= '3.0' ) }}
       - name: Coveralls Parallel
         uses: coverallsapp/github-action@master
         with:
@@ -61,6 +65,11 @@ jobs:
             matrix.ruby }}
           parallel: true
           path-to-lcov: ./coverage/lcov/devise-security.lcov
+        # Mongoid is not compatible with Ruby 3.0 as of 7.2.2
+        # Rails < 5.2 is not compatible with Ruby 3.0
+        if:
+          ${{ (!(matrix.orm == 'mongoid' && matrix.ruby >= '3.0')) &&
+          !(matrix.rails < '6.0' && matrix.ruby >= '3.0' ) }}
 
   finish:
     needs: run-tests
