Update file excludes to prevent gems from being analyzed

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,8 +6,9 @@ AllCops:
   Exclude:
     - Gemfile*
     - bin/*
-    - gemfiles/*
+    - gemfiles/**/*
     - test/**/*
+    - vendor/bundle/**/*
 
 Rails:
   Enabled: true
