Update rubocop requirement from ~> 0.81.0 to ~> 0.83.0
Also turns on rubocop for the test suite code because it was a big mess.

Based on https://github.com/devise-security/devise-security/pull/183

Co-authored-by Kevin Olbrich <kevin.olbrich@gmail.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,11 +1,15 @@
 require:
   - rubocop-rails
+
 AllCops:
   Exclude:
     - Gemfile*
     - bin/*
-    - gemfiles/*
-    - test/**/*
+    - gemfiles/**/*
+    - vendor/bundle/**/*
+  # Automatically enables new cops so that we only have to add them to
+  # edit default behavior
+  NewCops: enable
 
 Rails:
   Enabled: true
