--- a/.github/workflows/test_suite.yml
+++ b/.github/workflows/test_suite.yml
@@ -12,9 +12,11 @@ jobs:
       fail-fast: false
       matrix:
         orm: [active_record, mongoid]
-        rails: ["5.2", "6.0", "6.1"]
+        rails: ["5.2", "6.0", "6.1", "7.0"]
         ruby: ["2.6", "2.7", "3.0", head]
         exclude:
+          - orm: mongoid
+            rails: 7.0
           - orm: mongoid
             rails: 6.0
             ruby: head
