--- a/.github/workflows/test_suite.yml
+++ b/.github/workflows/test_suite.yml
@@ -15,6 +15,8 @@ jobs:
         rails: ["5.2", "6.0", "6.1", "7.0"]
         ruby: ["2.6", "2.7", "3.0", head]
         exclude:
+          - rails: 7.0
+            ruby: 2.6
           - orm: mongoid
             rails: 7.0
           - orm: mongoid
