--- a/.github/workflows/test_suite.yml
+++ b/.github/workflows/test_suite.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         orm: [active_record, mongoid]
         rails: ["5.2", "6.0", "6.1", "7.0"]
-        ruby: ["2.6", "2.7", "3.0", head]
+        ruby: ["2.6", "2.7", "3.0", "3.1", "head"]
         exclude:
           - rails: 7.0
             ruby: 2.6
