--- a/.github/workflows/test_suite.yml
+++ b/.github/workflows/test_suite.yml
@@ -17,16 +17,15 @@ jobs:
         exclude:
           - rails: 7.0
             ruby: 2.6
+          # See https://github.com/rails/rails/issues/43998, fixed in Rails 7.0.1
+          - rails: 7.0
+            ruby: 3.1
           - orm: mongoid
             rails: 7.0
-          - orm: mongoid
-            rails: 6.0
-            ruby: head
-          - orm: mongoid
-            rails: 6.1
-            ruby: head
           - rails: 5.2
             ruby: 3.0
+          - rails: 5.2
+            ruby: 3.1
           - rails: 5.2
             ruby: head
     steps:
