--- a/.github/workflows/test_suite.yml
+++ b/.github/workflows/test_suite.yml
@@ -12,8 +12,8 @@ jobs:
       fail-fast: false
       matrix:
         orm: [active_record, mongoid]
-        rails: ["5.2", "6.0", "6.1"]
-        ruby: ["2.6", "2.7", "3.0", head]
+        rails: ["5.2", "6.0", "6.1", "7.0"]
+        ruby: ["2.6", "2.7", "3.0", "3.1", "3.2", head]
         exclude:
           - orm: mongoid
             rails: 6.0
@@ -21,12 +21,18 @@ jobs:
           - orm: mongoid
             rails: 6.1
             ruby: head
+          - rails: 7.0
+            ruby: 2.6
           - rails: 5.2
             ruby: 3.0
           - rails: 5.2
+            ruby: 3.1
+          - rails: 5.2
+            ruby: 3.2
+          - rails: 5.2
             ruby: head
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
