Update minimum ruby development version to 2.7.
- Dropping support for ruby 2.6
Note: for now this code will probably continue to work properly with ruby 2.6, but we aren't explicity developing or testing with that version.

--- a/.github/workflows/test_suite.yml
+++ b/.github/workflows/test_suite.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         orm: [active_record, mongoid]
         rails: ["5.2", "6.0", "6.1"]
-        ruby: ["2.6", "2.7", "3.0", head]
+        ruby: ["2.7", "3.0", head]
         exclude:
           - orm: mongoid
             rails: 6.0
