--- a/.github/workflows/test_suite.yml
+++ b/.github/workflows/test_suite.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         orm: [active_record, mongoid]
         rails: ["5.2", "6.0", "6.1"]
-        ruby: ["2.6", "2.7", "3.0", head]
+        ruby: ["2.7", "3.0", head]
         exclude:
           - orm: mongoid
             rails: 6.0
@@ -26,11 +26,11 @@ jobs:
           - rails: 5.2
             ruby: head
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
-      - uses: actions/cache@v2
+      - uses: actions/cache@v3
         with:
           path: |
             **/bundle
@@ -46,7 +46,7 @@ jobs:
           bundle config path vendor/bundle
           bundle install
       - name: Start MongoDB
-        uses: superchargejs/mongodb-github-action@1.0.0
+        uses: superchargejs/mongodb-github-action@1.9.0
         if: ${{ matrix.orm == 'mongoid' }}
       - name:
           Tests for ORM ${{ matrix.orm }}, Rails ${{ matrix.rails }}, and Ruby
