--- a/.github/workflows/test_suite.yml
+++ b/.github/workflows/test_suite.yml
@@ -15,12 +15,6 @@ jobs:
         rails: ["5.2", "6.0", "6.1", "7.0"]
         ruby: ["2.7", "3.0", "3.1", "3.2", head]
         exclude:
-          - orm: mongoid
-            rails: 6.0
-            ruby: head
-          - orm: mongoid
-            rails: 6.1
-            ruby: head
           - rails: 5.2
             ruby: 3.0
           - rails: 5.2
@@ -29,6 +23,8 @@ jobs:
             ruby: 3.2
           - rails: 5.2
             ruby: head
+          - rails: 7.0
+            ruby: 2.6
     steps:
       - uses: actions/checkout@v3
       - uses: ruby/setup-ruby@v1
