--- a/.github/workflows/test_suite.yml
+++ b/.github/workflows/test_suite.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         orm: [active_record, mongoid]
         rails: ["5.2", "6.0", "6.1", "7.0"]
-        ruby: ["2.7", "3.0", "3.1", "3.2", head]
+        ruby: ["2.7", "3.0", "3.1", "3.2", "3.3", head]
         exclude:
           - rails: 5.2
             ruby: 3.0
@@ -21,6 +21,8 @@ jobs:
             ruby: 3.1
           - rails: 5.2
             ruby: 3.2
+          - rails: 5.2
+            ruby: 3.3
           - rails: 5.2
             ruby: head
           - rails: 7.0
