ci: Github Codespaces configuration

--- a/test/support/mongoid.yml
+++ b/test/support/mongoid.yml
@@ -1,6 +1,4 @@
 test:
   clients:
     default:
-      database: devise-test-suite
-      hosts:
-        - localhost:<%= ENV.fetch('MONGODB_PORT', '27017') %>
+      uri: <%= ENV.fetch('MONGODB_URI', 'mongodb://localhost:27017') %>
