--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,5 +1,9 @@
 version: 2
 updates:
+- package-ecosystem: "devcontainers"
+  directory: "/"
+  schedule:
+    interval: weekly
 - package-ecosystem: bundler
   directory: "/"
   schedule:
