--- a/test/dummy/config/mongoid.yml
+++ b/test/dummy/config/mongoid.yml
@@ -1,6 +1,4 @@
 test:
   clients:
     default:
-      database: devise_security_test
-      hosts:
-        - localhost: <%= ENV.fetch('MONGODB_PORT', '27017') %>
+      uri: <%= ENV.fetch('MONGODB_URI', 'mongodb://localhost:27017') %>
