--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,7 +10,7 @@ updates:
     interval: weekly
   open-pull-requests-limit: 10
   reviewers:
-  - olbrich
+  - devise-security/maintainers
   labels:
   - ":arrow_up: dependencies"
   ignore:
