--- a/.github/workflows/test_suite.yml
+++ b/.github/workflows/test_suite.yml
@@ -5,6 +5,9 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  schedule:
+    # 00:00 on the 1st of every month
+    - cron: '0 0 1 * *'
 jobs:
   run-tests:
     runs-on: ubuntu-latest
@@ -12,27 +15,14 @@ jobs:
       fail-fast: false
       matrix:
         orm: [active_record, mongoid]
-        rails: ["5.2", "6.0", "6.1", "7.0"]
-        ruby: ["2.7", "3.0", "3.1", "3.2", "3.3", head]
-        exclude:
-          - rails: 5.2
-            ruby: 3.0
-          - rails: 5.2
-            ruby: 3.1
-          - rails: 5.2
-            ruby: 3.2
-          - rails: 5.2
-            ruby: 3.3
-          - rails: 5.2
-            ruby: head
-          - rails: 7.0
-            ruby: 2.6
+        rails: ["6.1", "7.0"]
+        ruby: ["3.1", "3.2", "3.3", head]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
-      - uses: actions/cache@v3
+      - uses: actions/cache@v4
         with:
           path: |
             **/bundle
@@ -48,7 +38,7 @@ jobs:
           bundle config path vendor/bundle
           bundle install
       - name: Start MongoDB
-        uses: superchargejs/mongodb-github-action@1.9.0
+        uses: superchargejs/mongodb-github-action@1
         if: ${{ matrix.orm == 'mongoid' }}
       - name:
           Tests for ORM ${{ matrix.orm }}, Rails ${{ matrix.rails }}, and Ruby
@@ -74,7 +64,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Upload coverage to Coveralls
-        uses: coverallsapp/github-action@v2.1.0
+        uses: coverallsapp/github-action@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           parallel-finished: true
