--- a/.github/workflows/test_suite.yml
+++ b/.github/workflows/test_suite.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         orm: [active_record, mongoid]
-        rails: ["6.1", "7.0"]
+        rails: ["6.1", "7.0", "7.1"]
         ruby: ["3.1", "3.2", "3.3", head]
     steps:
       - uses: actions/checkout@v4
