--- a/.github/workflows/test_suite.yml
+++ b/.github/workflows/test_suite.yml
@@ -15,8 +15,8 @@ jobs:
       fail-fast: false
       matrix:
         orm: [active_record, mongoid]
-        rails: ["6.1", "7.0", "7.1"]
-        ruby: ["3.1", "3.2", "3.3", head]
+        rails: ["6.1", "7.0", "7.1", "7.2"]
+        ruby: ["3.1", "3.2", "3.3", "3.4", head]
     steps:
       - uses: actions/checkout@v4
       - uses: ruby/setup-ruby@v1
@@ -35,6 +35,8 @@ jobs:
         env:
           BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
         run: |
+          sudo apt-get update
+          sudo apt-get install -y libmagickwand-dev
           bundle config path vendor/bundle
           bundle install
       - name: Start MongoDB
