--- a/.github/workflows/test_suite.yml
+++ b/.github/workflows/test_suite.yml
@@ -8,6 +8,7 @@ on:
   schedule:
     # 00:00 on the 1st of every month
     - cron: '0 0 1 * *'
+
 jobs:
   run-tests:
     runs-on: ubuntu-latest
@@ -15,7 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         orm: [active_record, mongoid]
-        rails: ["6.1", "7.0", "7.1", "7.2"]
+        rails: ["7.0", "7.1", "7.2"]
         ruby: ["3.1", "3.2", "3.3", "3.4", head]
     steps:
       - uses: actions/checkout@v4
