--- a/.github/workflows/test_suite.yml
+++ b/.github/workflows/test_suite.yml
@@ -16,8 +16,11 @@ jobs:
       fail-fast: false
       matrix:
         orm: [active_record, mongoid]
-        rails: ["7.0", "7.1", "7.2"]
+        rails: ["7.0", "7.1", "7.2", "8.0"]
         ruby: ["3.1", "3.2", "3.3", "3.4", head]
+        exclude:
+          - rails: "8.0"
+            ruby: "3.1"
     steps:
       - uses: actions/checkout@v4
       - uses: ruby/setup-ruby@v1
